<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Andriy Chubko
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Music Release Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add_subscription">Add subscription</string>
    <string name="title_activity_add_subscriptions">Add subscriptions</string>
    <string name="search_hint">Search artists</string>
    <string name="action_refresh">Refresh releases</string>
    <string name="action_empty_releases">Empty releases</string>
    <string name="action_empty_artists">Empty artists</string>
    <string name="noSearchResults">Sorry, couldn\'t find anything</string>
    <string name="noReleases">No upcoming releases</string>
    <string name="noSubscriptions">You have no subscriptions</string>
    <string name="thumbnailDescription">thumbnail</string>
    <string name="controlButtonDescription">controlButton</string>
    <string name="controlRemoveDescription">Remove artist from subscriptions</string>
    <string name="controlAddDescription">Subscribe to this artist</string>
    <string name="undo_message">Deleted</string>
    <string name="undo">Undo</string>
    <string name="sync_wifi_sum">Perform scheduled synchronization only through Wi-fi</string>
    <string name="sync_wifi">Synchronize with Wi-fi only</string>
    <string name="sync_frequency">Synchronization frequency</string>
    <string name="refresh_on_start">Synchronize on app start</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="notifications">Notifications</string>
    <string name="lastfm">Last.fm</string>
    <string name="lastfm_dialog">Last.fm sign in</string>
    <string name="deezer">Deezer</string>
    <string name="deezer_dialog">Deezer sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="storage_warning_title">Warning</string>
    <string name="storage_warning_message">External storage is not available, app won\'t function properly</string>
    <string name="storage_warning_button">OK</string>
    <string name="january_uk">Січень</string>
    <string name="february_uk">Лютий</string>
    <string name="march_uk">Березень</string>
    <string name="april_uk">Квітень</string>
    <string name="may_uk">Травень</string>
    <string name="june_uk">Червень</string>
    <string name="july_uk">Липень</string>
    <string name="august_uk">Серпень</string>
    <string name="september_uk">Вересень</string>
    <string name="october_uk">Жовтень</string>
    <string name="november_uk">Листопад</string>
    <string name="december_uk">Грудень</string>
    <string name="tba_uk">Не оголошено</string>
    <string name="january_ru">Январь</string>
    <string name="february_ru">Февраль</string>
    <string name="march_ru">Март</string>
    <string name="april_ru">Апрель</string>
    <string name="may_ru">Май</string>
    <string name="june_ru">Июнь</string>
    <string name="july_ru">Июль</string>
    <string name="august_ru">Август</string>
    <string name="september_ru">Сентябрь</string>
    <string name="october_ru">Октябрь</string>
    <string name="november_ru">Ноябрь</string>
    <string name="december_ru">Декабрь</string>
    <string name="tba_ru">Не объявлен</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin_dialog_ok_button">Sign in</string>
    <string name="signin_dialog_cancel_button">Cancel</string>
    <string name="title_activity_deezer_sign_in">Deezer Sign In</string>
    <string name="lastfm_wrong_username">Wrong username</string>
    <string name="internet_needed_warning">Need internet connection</string>
    <string name="external_storage_warning">Need available external storage</string>
    <string name="lastfm_dialog_message">Enter username, set plays threshold for artist to be added</string>
    <string name="log_in_button">Log in</string>
    <string name="cancel_button">Cancel</string>
    <string name="deezer_logout_message">You are already signed in, would you like to log out?</string>
    <string name="logout_button">Log out</string>
    <string name="deezer_signin_message">Proceed to Deezer sign in page to get artists from your library?</string>
    <string name="ok_button">OK</string>
    <string name="lastfm_threshold">Plays threshold</string>
    <string name="lastfm_invalid_threshold">Invalid threshold</string>
    <string name="sync_with_lastfm">Sync with Last.fm</string>
    <string name="sync_with_deezer">Sync with Deezer</string>
    <string name="main_activity_name">Music Release Notifier</string>
    <string name="sync_message">Sync is in progress…</string>
    <string name="cancel_button_description">cancelButton</string>
</resources>
