<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Andriy Chubko
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.qwertyfinger.musicreleasetracker">

    <CheckBoxPreference
        android:key="wifi_only"
        android:title="@string/sync_wifi"
        android:summary="@string/sync_wifi_sum"
        android:defaultValue="true" />

    <ListPreference
        android:key="sync_frequency"
        android:title="@string/sync_frequency"
        android:dialogTitle="@string/sync_frequency"
        android:entries="@array/sync_frequency_entries"
        android:entryValues="@array/sync_frequency_values"
        android:defaultValue="5" />

    <!-- For future implementation-->
    <MultiSelectListPreference
        android:key="subscriptions"
        android:title="@string/subscriptions"
        android:dialogTitle="@string/subscriptions"
        android:entries="@array/subscriptions_entries"
        android:entryValues="@array/subscriptions_values"
        android:defaultValue="@array/subscriptions_default_value" />

    <MultiSelectListPreference
        android:key="notifications"
        android:title="@string/notifications"
        android:dialogTitle="@string/notifications"
        android:entries="@array/notifications_entries"
        android:entryValues="@array/notifications_values"
        android:defaultValue="@array/notifications_default_value" />

    <com.qwertyfinger.musicreleasesnotifier.dialogs.LastfmSignInDialog
        android:key="last_fm"
        android:title="@string/lastfm"
        android:dialogTitle="@string/lastfm_dialog"
        android:dialogLayout="@layout/lastfm_dialog"
        android:defaultValue=" "/>

    <com.qwertyfinger.musicreleasesnotifier.dialogs.DeezerSignInDialog
        android:key="deezer"
        android:title="@string/deezer"
        android:defaultValue="false"
        android:dialogTitle="@string/deezer_dialog" />

</PreferenceScreen>