<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Andriy Chubko
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:orderInCategory="1"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />-->
    <item android:id="@+id/action_add_subscription"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add_subscription"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/action_empty_artists"
          android:title="@string/action_empty_artists"
          android:orderInCategory="4"
          app:showAsAction="never"
          android:visible="false"/>

    <item android:id="@+id/action_lastfm_sync"
          android:title="@string/sync_with_lastfm"
          android:orderInCategory="5"
          app:showAsAction="never"
          android:visible="false"/>

    <item android:id="@+id/action_deezer_sync"
          android:title="@string/sync_with_deezer"
          android:orderInCategory="6"
          app:showAsAction="never"
          android:visible="false"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="999"
        app:showAsAction="never" />
</menu>
